# cathedral

./: .dockerignore  .gitignore  .trivyignore.yaml  AGENTS.md  CATHEDRAL_MIGRATION.md  CHANGELOG.md  CLAUDE.md  CREDITS.md  Cargo.toml  LICENSE  README.md  SPEC-incentive-mechanism.md  justfile  llms-full.txt  llms.txt  plan.md
.cargo/: config.toml
crates/basilica-aggregator/: Cargo.toml  README.md  VERIFICATION.md
crates/basilica-aggregator/config/: aggregator.toml.example
crates/basilica-aggregator/migrations/: 001_init.sql  002_deployments.sql
crates/basilica-aggregator/src/: background.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  models.rs  service.rs
crates/basilica-aggregator/src/api/: handlers.rs  mod.rs  query.rs
crates/basilica-aggregator/src/providers/: http_utils.rs  mod.rs
crates/basilica-aggregator/src/vip/: cache.rs  csv.rs  mod.rs  poller.rs  rental_ops.rs  sheets.rs  task.rs  types.rs
crates/basilica-aggregator/tests/: integration_test.rs
crates/basilica-api/: Cargo.toml  README.md
crates/basilica-api/migrations/: 005_add_port_mappings.sql  006_create_user_deployments.sql  006_secure_cloud_aggregator.sql  007_add_public_deployments.sql  007_rental_tracking.sql  008_create_node_tokens.sql  009_add_gpu_storage_fields.sql  010_add_provider_ssh_key_metadata.sql  012_secure_cloud_aggregator.sql  015_terminated_secure_cloud_rentals.sql  016_deployment_instance_mappings.sql  017_drop_ssh_key_fk_constraint.sql  017_vip_rentals.sql  018_vip_nullable_ssh_key.sql
crates/basilica-api/src/: apimetrics.rs  error.rs  k8s_client.rs  lib.rs  main.rs  metrics.rs  server.rs
crates/basilica-api/src/api/: mod.rs  query.rs
crates/basilica-api/src/config/: deployment.rs  dns.rs  mod.rs
crates/basilica-api/src/db/: cluster_tokens.rs  deployments.rs  instance_mappings.rs  mod.rs
crates/basilica-api/src/dns/: cloudflare.rs  mod.rs
crates/basilica-api/src/envoy/: mod.rs
crates/basilica-api/src/gateway/: httproute.rs  mod.rs
crates/basilica-api/src/k8s/: client.rs  cluster_tokens.rs  helpers.rs  k3s_commands.rs  mock.rs  mod.rs  security_policies.rs  tests.rs  trait.rs  types.rs
crates/basilica-api/src/metrics/: api_metrics.rs  mod.rs  prometheus_metrics.rs
crates/basilica-api/src/ssh/: client.rs  config.rs  mod.rs  tests.rs  types.rs
crates/basilica-api/src/wireguard/: config.rs  ip_allocator.rs  mod.rs
crates/basilica-autoscaler/: Cargo.toml
crates/basilica-autoscaler/src/: config.rs  error.rs  health.rs  leader_election.rs  lib.rs  main.rs  metrics.rs  offering_matcher.rs  runtime.rs  warm_pool.rs
crates/basilica-autoscaler/src/api/: mod.rs  secure_cloud.rs
crates/basilica-autoscaler/src/controllers/: k8s_client.rs  mod.rs  node_pool_controller.rs  scaling_policy_controller.rs
crates/basilica-autoscaler/src/crd/: mod.rs  node_pool.rs  scaling_policy.rs
crates/basilica-autoscaler/src/provisioner/: k3s.rs  mod.rs  ssh.rs  wireguard.rs
crates/basilica-miner/: Cargo.toml
crates/basilica-miner/docs/: bidding-strategy.md
crates/basilica-miner/migrations/: 001_initial_schema.sql
crates/basilica-miner/src/: bidding.rs  config.rs  lib.rs  main.rs  node_manager.rs  registration_client.rs  request_verification.rs  validator_comms.rs  validator_discovery.rs
crates/basilica-miner/src/bittensor_core/: chain_registration.rs
crates/basilica-miner/src/cli/: args.rs  commands.rs  mod.rs
crates/basilica-miner/src/metrics/: node_metrics.rs
crates/basilica-miner/src/persistence/: assignment_db.rs  mod.rs  registration_db.rs
crates/basilica-miner/src/services/: mod.rs  stake_monitor.rs
crates/basilica-miner/src/ssh/: mod.rs  session_manager.rs  session_orchestrator.rs  validator_access.rs
crates/basilica-miner/tests/: mod.rs
crates/basilica-miner/tests/integration/: end_to_end_flow_test.rs  executor_deployment_integration_test.rs  metrics_integration_test.rs  mod.rs  validator_grpc_integration_test.rs
crates/basilica-miner/tests/unit/: chain_registration_tests.rs  cli_tests.rs  config_tests.rs  executor_fleet_manager_tests.rs  mod.rs  node_manager_tests.rs  persistence_tests.rs  validator_comms_tests.rs
crates/basilica-operator/: Cargo.toml
crates/basilica-operator/src/: billing.rs  config.rs  k8s_client.rs  labels.rs  lib.rs  main.rs  metrics.rs  metrics_provider.rs  runtime.rs
crates/basilica-storage/: Cargo.toml
crates/basilica-storage/src/: backend.rs  config.rs  error.rs  lib.rs  metrics.rs  quota.rs  snapshot.rs
crates/cathedral-cli/: CHANGELOG.md  Cargo.toml
crates/cathedral-cli/src/: client.rs  error.rs  github_releases.rs  lib.rs  main.rs  update_check.rs
crates/cathedral-protocol/: Cargo.toml  build.rs
crates/cathedral-protocol/proto/: billing.proto  miner_discovery.proto  miner_payouts.proto
crates/cathedral-protocol/src/: lib.rs
crates/cathedral-sdk/: CHANGELOG.md  Cargo.toml  README.md
crates/cathedral-sdk-python/: CHANGELOG.md  Cargo.toml  README.md  RELEASE_CHECKLIST.md  bump-version.sh  pyproject.toml
crates/cathedral-sdk-python/examples/: health_check.py  list_executors.py  quickstart.py  rental_utils.py  start_cpu_rental.py  start_rental.py  start_secure_cloud_gpu_rental.py
crates/cathedral-sdk-python/src/: lib.rs  types.rs
crates/cathedral-sdk-python/tests/: test_async_methods.py  test_dns_propagation.py  test_dns_propagation_e2e.py  test_gpu_flavour_preferences.py
crates/cathedral-sdk/src/: client.rs  error.rs  jobs.rs  lib.rs  types.rs
crates/integration-tests/: Cargo.toml
crates/integration-tests/billing/: scenario_balance_check.rs
crates/integration-tests/src/: auth_test_utils.rs  config.rs  k8s_helpers.rs  lib.rs  main.rs
crates/integration-tests/tests/: README.md  api_k8s_integration.rs  billing_rules_engine_tests.rs  operator_k8s_integration.rs
orchestrator/cluster-manager/: README.md  pyproject.toml
orchestrator/cluster-manager/docs/: bundle.md  etcd.md  flannel.md  health.md  index.md  kubeconfig.md  maintenance.md  network.md  scaling.md  troubleshooting.md  userdeployment.md  wg.md
scripts/migrations/: Cargo.toml  Dockerfile  migrate_aead_key.rs
(+1326 files in other folders)
