[package]
name = "basilica-aggregator"
version = "0.1.0"
edition = "2021"

[dependencies]
# Basilica dependencies
basilica-common = { path = "../basilica-common" }

# HTTP framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Async runtime
tokio = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Database (PostgreSQL only)
sqlx = { workspace = true, features = ["macros"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Decimal precision for prices
rust_decimal = { workspace = true, features = ["serde-with-str"] }

# Configuration
config = "0.14"

# Time handling
chrono = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Async trait support
async-trait = { workspace = true }

# UUID generation
uuid = { workspace = true }

[dev-dependencies]
axum-test = "15"
mockito = "1"
toml = { workspace = true }
