[package]
name = "basilica-api"
version = "0.1.0"
edition = "2021"
authors = ["Basilica Team"]
description = "Smart HTTP gateway for Basilica validator network"
license = "MIT OR Apache-2.0"

[dependencies]
# Internal dependencies
basilica-common = { path = "../basilica-common" }
bittensor = { path = "../bittensor" }
basilica-validator = { path = "../basilica-validator", features = ["client"] }
basilica-sdk = { path = "../basilica-sdk" }
basilica-billing = { path = "../basilica-billing" }
basilica-payments = { path = "../basilica-payments" }
basilica-protocol = { path = "../basilica-protocol" }

# Async runtime
tokio = { workspace = true }
tokio-util = { workspace = true }
async-stream = { workspace = true }

# Web framework
axum = { workspace = true, features = ["ws"] }
tower = { workspace = true }
tower-http = { workspace = true, features = ["cors", "timeout", "trace"] }

# HTTP client
reqwest = { workspace = true }
uuid = { workspace = true }
http = "0.2"
hyper = { version = "0.14", features = ["client", "http1"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
toml = { workspace = true }
prost-types = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
kube = { version = "0.88", features = ["rustls-tls", "ws", "runtime", "admission"] }
k8s-openapi = { version = "0.21", default-features = false }

# Configuration
figment = { workspace = true }

# Authentication
jsonwebtoken = { workspace = true }
argon2 = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
async-trait = "0.1"
sha2 = { workspace = true }
scrypt = { workspace = true }
password-hash = { workspace = true }

# Rate limiting
governor = { workspace = true }

# Validation
regex = { workspace = true }

# SSH client
async-ssh2-tokio = { workspace = true }

# Caching
moka = { workspace = true }


# Concurrent collections
dashmap = { workspace = true }

# Additional dependencies
rust_decimal = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
clap-verbosity-flag = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
once_cell = { workspace = true }
tempfile = "3"

# Load balancing algorithms
rand = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }
metrics-exporter-prometheus = { workspace = true }

[features]
default = ["server", "utoipa"]
server = []
client = []
utoipa = []
full = ["server", "client", "utoipa"]

[[bin]]
name = "basilica-api"
path = "src/main.rs"

[[bin]]
name = "gen-api-key"
path = "src/bin/gen_api_key.rs"
