[package]
name = "basilica-autoscaler"
version = "0.1.0"
edition = "2021"
description = "Basilica GPU node autoscaler: dynamic scaling of K3s GPU nodes"
authors = ["Basilica Team"]
license = "MIT"

[[bin]]
name = "basilica-autoscaler"
path = "src/main.rs"

[[bin]]
name = "crdgen"
path = "src/bin/crdgen.rs"

[dependencies]
# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }

# Kubernetes
kube = { version = "0.88", features = ["derive", "rustls-tls"] }
kube-runtime = "0.88"
k8s-openapi = { version = "0.21", default-features = false, features = ["v1_29"] }
schemars = { version = "0.8", features = ["chrono"] }
prometheus = "0.13"
tokio-util = { version = "0.7", features = ["rt"] }

# SSH (from workspace)
async-ssh2-tokio = { workspace = true }

# Internal crate
basilica-common = { path = "../basilica-common" }

# YAML for script templates
serde_yaml = "0.9"

# Crypto and encoding (from workspace)
sha2 = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
mockall = "0.12"
tokio-test = "0.4"
tempfile = { workspace = true }
tower = { workspace = true }
