[package]
name = "basilica-operator"
version = "0.1.0"
edition = "2021"
description = "Basilica K3s operator: CRDs and controllers for Jobs and Rentals"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
kube = { version = "0.88", features = ["derive", "rustls-tls"] }
schemars = "0.8"
k8s-openapi = { version = "0.21", default-features = false }
async-trait = "0.1"
metrics = { workspace = true }
serde_yaml = "0.9"
kube-runtime = "0.88"
metrics-exporter-prometheus = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
futures = "0.3"
axum = { version = "0.7", default-features = false, features = ["json", "tokio", "http1"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
serde_json = { workspace = true }
kube = { version = "0.88", features = ["derive", "rustls-tls"] }
schemars = "0.8"
k8s-openapi = { version = "0.21", features = ["v1_29"] }
metrics-exporter-prometheus = { workspace = true }
