[package]
name = "basilica-storage"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "basilica-storage-daemon"
path = "src/bin/daemon.rs"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }

# Object storage
object_store = { version = "0.11", features = ["aws", "gcp"] }
bytes = "1.5"

# FUSE filesystem
fuser = "0.14"
libc = { workspace = true }

# Async utilities
async-trait = { workspace = true }
futures = { workspace = true }
tokio-util = { workspace = true }

# CLI
clap = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros"] }
