[package]
name = "basilica-storage"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "basilica-storage-daemon"
path = "src/bin/daemon.rs"
required-features = ["fuse"]

[features]
default = ["fuse"]
fuse = ["dep:fuser"]

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
parking_lot = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }

# Object storage - AWS SDK for R2 compatibility
aws-config = "1.1"
aws-sdk-s3 = "1.15"
aws-smithy-runtime-api = "1.1"
bytes = "1.5"

# FUSE filesystem (optional, requires system libfuse3-dev)
fuser = { version = "0.14", optional = true }
libc = { workspace = true }

# Async utilities
async-trait = { workspace = true }
futures = { workspace = true }
tokio-util = { workspace = true }

# Rate limiting and quotas
governor = "0.6"

# CLI
clap = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros"] }
