[package]
name = "cathedral-cli"
version = "0.25.1"
edition = "2021"
authors = ["Cathedral Team"]
description = "Unified CLI for Cathedral GPU rental and network management"
license = "MIT"
repository = "https://github.com/bigailabs/substrate"

[[bin]]
name = "basilica"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
clap = { workspace = true }
clap-verbosity-flag = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
semver = { workspace = true }

# HTTP client for API communication
reqwest = { workspace = true, features = ["blocking"] }
futures = { workspace = true }
futures-util = { workspace = true }
eventsource-stream = { workspace = true }

# Terminal UI and interaction
dialoguer = { workspace = true }
indicatif = { workspace = true }
console = { workspace = true }
tabled = { workspace = true }

# Shell completions
clap_complete = { workspace = true }

# File operations
shellexpand = { workspace = true }
etcetera = { workspace = true }

# Error handling
color-eyre = { workspace = true }

# OAuth dependencies
oauth2 = { workspace = true }
axum = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
webbrowser = { workspace = true }
url = { workspace = true }

# Self-update
self_update = { workspace = true }

# SSH key parsing
ssh-key = { workspace = true }

# Pattern matching
regex = { workspace = true }

# URL encoding
urlencoding = { workspace = true }

# Internal crate dependencies
cathedral-common = { path = "../cathedral-common" }
cathedral-sdk = { path = "../cathedral-sdk" }
cathedral-validator = { path = "../cathedral-validator", features = ["client", "cli"] }

[dev-dependencies]
