[package]
name = "cathedral-protocol"
version = "0.1.0"
edition = "2021"
description = "gRPC protocol definitions and message types for Cathedral  communication"
rust-version = "1.70"

[dependencies]
# Use workspace dependencies
cathedral-common = { path = "../cathedral-common" }
tonic = { workspace = true, features = ["tls"] }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }

[features]
default = []
# Feature for client-side stubs
client = []
# Feature for server-side stubs  
server = [] 
