[package]
name = "cathedral-sdk-python"
version = "0.25.2"
edition = "2021"
authors = ["Cathedral Team"]
description = "Python bindings for the Cathedral SDK"
license = "MIT OR Apache-2.0"

[lib]
# TODO(cathedral-rename): Python binding module name kept as "basilica" for backwards compatibility.
# Change to "cathedral" once PyPI package migration is complete.
name = "basilica"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "stub_gen"

[features]
default = []
extension-module = ["pyo3/extension-module"]
stub-gen = ["dep:pyo3-stub-gen", "dep:pyo3-stub-gen-derive"]

[dependencies]
cathedral-sdk = { path = "../cathedral-sdk" }
cathedral-validator = { path = "../cathedral-validator", features = ["client"] }
pyo3 = { workspace = true }
pyo3-stub-gen = { workspace = true, optional = true }
pyo3-stub-gen-derive = { workspace = true, optional = true }
tokio = { workspace = true }
serde = { workspace = true }
pythonize = { workspace = true }

[build-dependencies]
