[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "cathedral-sdk"
version = "0.25.2"
description = "Python SDK for deploying containerized applications on the Cathedral GPU cloud"
readme = "README.md"
license = { text = "MIT OR Apache-2.0" }
# TODO(cathedral-rename): Update email once cathedral.ai domain is set up
authors = [{ name = "Cathedral Team", email = "team@basilica.ai" }]
requires-python = ">=3.10"
keywords = [
  "gpu",
  "cloud",
  "deployment",
  "cathedral",
  "compute",
  "kubernetes",
  "ml",
  "ai",
  "machine-learning",
  "deep-learning",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Distributed Computing",
  "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "mypy>=1.0", "maturin>=1.0"]

[project.urls]
# TODO(cathedral-rename): Update URLs once cathedral.ai domain and GitHub org are set up
Homepage = "https://basilica.ai"
Documentation = "https://docs.basilica.ai"
Repository = "https://github.com/bigailabs/substrate"
Issues = "https://github.com/bigailabs/substrate/issues"
Changelog = "https://github.com/bigailabs/substrate/blob/main/crates/cathedral-sdk-python/CHANGELOG.md"

[tool.maturin]
features = ["pyo3/extension-module", "pyo3/abi3-py310"]
python-source = "python"
# TODO(cathedral-rename): Python module name kept as "basilica._basilica" for backwards compatibility
# Change to "cathedral._cathedral" once PyPI package migration is complete
module-name = "basilica._basilica"
