[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }

# Internal dependencies
basilica-validator = { path = "../basilica-validator" }
basilica-miner = { path = "../basilica-miner" }
basilica-protocol = { path = "../basilica-protocol" }
basilica-common = { path = "../basilica-common" }
basilica-operator = { path = "../basilica-operator" }
basilica-api = { path = "../basilica-api" }
uuid = { workspace = true }
prost = { workspace = true }
tonic = { workspace = true, features = ["tls", "tls-roots"] }
sqlx = { workspace = true }

# Kubernetes dependencies for integration tests
kube = { version = "0.88", features = ["derive", "rustls-tls"] }
k8s-openapi = { version = "0.21", default-features = false, features = ["v1_29"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "test-util"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }


[[test]]
name = "bdd_payment_billing_flow"
path = "tests/bdd_payment_billing_flow.rs"

[[test]]
name = "operator_k8s_integration"
path = "tests/operator_k8s_integration.rs"

[[test]]
name = "api_k8s_integration"
path = "tests/api_k8s_integration.rs"

# CLI binaries for manual testing and production smoke tests
[[bin]]
name = "scenario_wallet_create"
path = "payments/scenario_wallet_create.rs"

[[bin]]
name = "scenario_deposits_list"
path = "payments/scenario_deposits_list.rs"

[[bin]]
name = "scenario_balance_check"
path = "billing/scenario_balance_check.rs"

[[bin]]
name = "scenario_credits_apply"
path = "billing/scenario_credits_apply.rs"
