[package]
name = "cathedral-migrations"
version = "0.1.0"
edition = "2021"

# Exclude from parent workspace - this is a standalone tool
[workspace]

[[bin]]
name = "migrate-aead-key"
path = "migrate_aead_key.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres"] }
anyhow = "1.0"
aes-gcm = "0.10"
rand = "0.8"
hex = "0.4"
base64 = "0.21"
